# basicdweet

./: README.md  mkdocs.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
basicdweet/: __init__.py  basicdweet.py
docs/: 404.html  index.html  index.md  mkapi-common.css  requirements.txt  search.html  sitemap.xml
docs/api/: index.html
docs/search/: search_index.json
md_docs/: api.md  index.md
tests/: test_basicdweet.py
