[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "basicdweet"
version = "0.4.0"
description = "Basic APIs of the free dweet service."
readme = "README.md"
authors = [{ name = "Quan Lin", email = "jacklinquan@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["dweet"]
dependencies = ["requests"]
requires-python = ">=3.7"

[project.optional-dependencies]
aiohttp = ["aiohttp"]
dev = ["aiohttp", "black", "pytest"]

[project.urls]
Homepage = "https://github.com/jacklinquan/basicdweet"
